# licensor-metrics

./: .gitignore  README.md  build.sbt
.bloop/: royalties-insights-api-test.json  royalties-insights-api.json
.bsp/: sbt.json
.metals/: metals.lock.db  metals.trace.db
.metals/.backup_logs/2024-12-26/: log_00-43-14-740
.metals/.reports/metals-full/2024-12-23/: r_compiler-error_(royalties-insights-api)_15-44-40-201.md  r_compiler-error_(royalties-insights-api)_22-57-39-822.md  r_compiler-error_(royalties-insights-api)_22-59-35-702.md
.metals/.reports/metals-full/2024-12-25/: r_compiler-error_(royalties-insights-api)_11-54-35-154.md  r_compiler-error_(royalties-insights-api)_12-05-20-949.md  (+5 more)
api/.metals/: metals.lock.db
metrics-pipeline/dbt/: .gitignore  .user.yml  dbt_project.yml  profiles.yml
metrics-pipeline/metrics_pipeline/: .env  .gitignore  dagster.yml  encoded_creds.txt  pyproject.toml  requirements.txt  setup.py
metrics-pipeline/metrics_pipeline/dagster_def/: __init__.py
metrics-pipeline/metrics_pipeline/dagster_def/assets/: constants.py  postgres.py
metrics-pipeline/metrics_pipeline/dagster_def/data/state/: batch_id.csv  latest_processed_time.csv
metrics-pipeline/metrics_pipeline/dagster_def/resources/: __init__.py
metrics-pipeline/metrics_pipeline/pipeline/: __init__.py
metrics-pipeline/metrics_pipeline/pipeline/assets/: bigquery.py  common.py  constants.py  dbt.py  redis.py
metrics-pipeline/metrics_pipeline/pipeline/data/state/: batch_id.csv  latest_processed_time.csv
metrics-pipeline/metrics_pipeline/pipeline/resources/: __init__.py
(+42 files in other folders)
